Disable swagger again

--- a/domains/transfer-agreements/TransferAgreements.API/API/appsettings.Development.json
+++ b/domains/transfer-agreements/TransferAgreements.API/API/appsettings.Development.json
@@ -13,6 +13,6 @@
         "Password": "postgres"
     },
     "projectOrigin": {
-        "WalletUrl": "https://eo-u-1589generatewa.westeurope.cloudapp.azure.com/"
+        "WalletUrl": "https://demo.energioprindelse.dk/"
     }
 }
