--- a/domains/auth/Auth.API/API/appsettings.Development.json
+++ b/domains/auth/Auth.API/API/appsettings.Development.json
@@ -8,7 +8,7 @@
     "Cryptography:Key": "secretsecretsecretsecret",
     "Database:Host": "localhost",
     "Database:Port": "5432",
-    "Database:Name": "postgres",
+    "Database:Name": "Database",
     "Database:User": "admin",
     "Database:Password": "admin",
     "DataSync:Uri": null,
