Preview/1589 generate wallet deposit endpoint (#367)
Added feature for Creating Wallet Deposit Endpoints:

1. Added new POST endpoint at /api/transfer-agreements/wallet-deposit-endpoint/
    1.1 Task<ActionResult> CreateWalletDepositEndpoint()
        1.1.1 return Ok(new { result = base64String });
2. Added IWalletDepositEndpoint interface
3. Added WalletDepositEndpoint service:
    3.1 CreateWalletDepositWithToken(JwtToken token)
        3.1.1 return ConvertObjectToBase64(walletDepositEndpoint);
    3.2 ConvertObjectToBase64(object obj)
        3.2.1 return base64String;
    3.3 CreateWalletDepositEndpoint(string bearerToken)
        3.3.1 return response.WalletDepositEndpoint;
4. Added JwtToken record
    4.1 JwtToken(string Issuer, string Audience, string Subject, string Name, int ExpirationMinutes = 5)
    4.2 public string GenerateToken()
        4.2.1 return new JwtSecurityTokenHandler().WriteToken(token)
5. Added ProjectOriginClients.csproj to API.csproj and TransferAgreements.sln, as reference
6. Updated DockerFile for API.csproj, to use latest debian, with apt-get and wget
7. Added .Config folder, with dotnet-tools file, for configurating of dotnet-grpc
8. Added additional UserContext extension methods, for aud, iss, iat, exp Claims
9. Setup for communicating with the wallet service, via ProjectOriginOptions
10. Updated Helm Values, and appsettings.Development to be able to fetch WalletUrl, from environment
11. Added Integration tests

--- a/domains/transfer-agreements/TransferAgreements.API/API/API.csproj
+++ b/domains/transfer-agreements/TransferAgreements.API/API/API.csproj
@@ -48,4 +48,8 @@
         </None>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\Shared\ProjectOriginClients\ProjectOriginClients.csproj" />
+    </ItemGroup>
+
 </Project>
