--- a/domains/transfer-agreements/TransferAgreements.API/API/appsettings.Development.json
+++ b/domains/transfer-agreements/TransferAgreements.API/API/appsettings.Development.json
@@ -11,5 +11,8 @@
         "Name": "Database",
         "User": "postgres",
         "Password": "postgres"
+    },
+    "projectOrigin": {
+        "WalletUrl": "https://demo.energioprindelse.dk/"
     }
 }
