starting up locally

--- a/domains/auth/Auth.API/API/appsettings.Development.json
+++ b/domains/auth/Auth.API/API/appsettings.Development.json
@@ -32,5 +32,7 @@
         "MitID_Professional",
         "NemID_Private",
         "NemID_Professional"
-    ]
+    ],
+    "Terms:PrivacyPolicyVersion": "2",
+    "Terms:TermsOfServiceVersion": "1"
 }
