--- a/domains/transfer-agreements/TransferAgreements.API/API.UnitTests/API.UnitTests.csproj
+++ b/domains/transfer-agreements/TransferAgreements.API/API.UnitTests/API.UnitTests.csproj
@@ -26,6 +26,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\Shared\ProjectOriginClients\ProjectOriginClients.csproj" />
         <ProjectReference Include="..\API\API.csproj" />
     </ItemGroup>
 
