--- a/domains/auth/Auth.API/API/appsettings.Development.json
+++ b/domains/auth/Auth.API/API/appsettings.Development.json
@@ -28,10 +28,10 @@
     "Oidc:ResueSubject": "false",
     "Otlp:ReceiverEndpoint": "http://localhost:4317",
     "IdentityProvider:Providers": [
-        "MitID_Private",
-        "MitID_Professional",
-        "NemID_Private",
-        "NemID_Professional"
+        "MitIdPrivate",
+        "MitIdProfessional",
+        "NemIdPrivate",
+        "NemIdProfessional"
     ],
     "Terms:PrivacyPolicyVersion": "3",
     "Terms:TermsOfServiceVersion": "1"
