--- a/.github/workflows/build-libraries.yaml
+++ b/.github/workflows/build-libraries.yaml
@@ -64,6 +64,7 @@ jobs:
 
           echo '::group::dockerfiles'
           echo "$dockerfiles" | jq -r '.'
+          env
           echo '::endgroup::'
 
   build-dotnet-library:
