--- a/libraries/docker/static-files/configuration.yaml
+++ b/libraries/docker/static-files/configuration.yaml
@@ -1,5 +1,6 @@
-name: static-files
+name: eo-static-files
 version: 0.0.1
+repo: ghcr.io/energinet-datahub
 references:
   - file: k8s/energy-origin-apps/auth/base/auth-env-injection.yaml
     path: spec.template.spec.initContainer | select(.name = "auth-api-init-terms") | .image
