--- a/libraries/docker/static-files/configuration.yaml
+++ b/libraries/docker/static-files/configuration.yaml
@@ -3,6 +3,6 @@ version: 0.0.1
 repo: ghcr.io/energinet-datahub
 references:
   - file: k8s/energy-origin-apps/auth/base/auth-env-injection.yaml
-    path: spec.template.spec.initContainer | select(.name == "auth-api-init-terms") | .image
+    path: .spec.template.spec.initContainers[] | select(.name == "auth-api-init-terms") | .image
   - file: k8s/energy-origin-apps/frontend/base/frontend-terms-injection.yaml
-    path: spec.template.spec.initContainer | select(.name == "frontend-app-init-terms") | .image
+    path: .spec.template.spec.initContainers[] | select(.name == "frontend-app-init-terms") | .image
