--- a/domains/certificates/RegistryConnector/Worker/appsettings.Development.json
+++ b/domains/certificates/RegistryConnector/Worker/appsettings.Development.json
@@ -12,6 +12,6 @@
         "Password": "guest"
     },
     "FeatureFlags": {
-        "RunsProjectOriginIntegrationSample": true
+        "RunsProjectOriginIntegrationSample": false
     }
 }
