--- a/domains/auth/.devcontainer/devcontainer.json
+++ b/domains/auth/.devcontainer/devcontainer.json
@@ -9,7 +9,9 @@
     "remoteEnv": {
         "PATH": "${containerEnv:PATH}:~/.dotnet/tools"
     },
-    "features": {},
+    "features": {
+        "ghcr.io/devcontainers/features/docker-in-docker:2": {}
+    },
     "customizations": {
         "vscode": {
             "extensions": [
