Move away from alpine image

--- a/domains/certificates/RegistryConnector/Worker/Dockerfile
+++ b/domains/certificates/RegistryConnector/Worker/Dockerfile
@@ -20,5 +20,5 @@ FROM base AS final
 RUN apt-get -y update && apt-get -y install wget && apt-get clean
 WORKDIR /app
 COPY --from=publish /app/publish .
-HEALTHCHECK CMD wget -qO- http://localhost:80/healthz > /dev/null || exit 1
+HEALTHCHECK CMD wget -qO- http://localhost:80/health > /dev/null || exit 1
 ENTRYPOINT ["dotnet", "RegistryConnector.Worker.dll"]
