Refactored unit test file.

--- a/domains/transfer-agreements/TransferAgreements.API/API/API.csproj
+++ b/domains/transfer-agreements/TransferAgreements.API/API/API.csproj
@@ -52,4 +52,8 @@
       <ProjectReference Include="..\..\Shared\ProjectOriginClients\ProjectOriginClients.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="Data\JwtToken.cs" />
+    </ItemGroup>
+
 </Project>
