--- a/domains/auth/Auth.API/API/appsettings.Development.json
+++ b/domains/auth/Auth.API/API/appsettings.Development.json
@@ -38,9 +38,8 @@
     "Roles": {
         "RoleConfigurations": [
             {
-                "Key": "AuthAdmin",
-                "Name": "x",
-                "ManagesRoles": true,
+                "Key": "authAdmin",
+                "Name": "AuthAdmin",
                 "Matches": [
                     {
                         "Property": "cna",
@@ -50,13 +49,13 @@
                 ]
             },
             {
-                "Key": "Viewer",
-                "Name": "",
+                "Key": "viewer",
+                "Name": "Viewer",
                 "IsDefault": true
             },
             {
-                "Key": "HasNemId",
-                "Name": "",
+                "Key": "hasNemId",
+                "Name": "HasNemId",
                 "IsTransient": true,
                 "Matches": [
                     {
