--- a/domains/auth/Auth.API/API/appsettings.Development.json
+++ b/domains/auth/Auth.API/API/appsettings.Development.json
@@ -34,5 +34,36 @@
         "NemIdProfessional"
     ],
     "Terms:PrivacyPolicyVersion": "3",
-    "Terms:TermsOfServiceVersion": "1"
+    "Terms:TermsOfServiceVersion": "1",
+    "Roles": {
+        "RoleConfigurations": [
+            {
+                "Key": "authAdmin",
+                "Name": "AuthAdmin",
+                "Matches": [
+                    {
+                        "Property": "cna",
+                        "Value": "company-nemid-administrator",
+                        "Operator": "contains"
+                    }
+                ]
+            },
+            {
+                "Key": "viewer",
+                "Name": "Viewer",
+                "IsDefault": true
+            },
+            {
+                "Key": "hasNemId",
+                "Name": "HasNemId",
+                "IsTransient": true,
+                "Matches": [
+                    {
+                        "Property": "nemid.pid",
+                        "Operator": "exists"
+                    }
+                ]
+            }
+        ]
+    }
 }
