Added metrics to code base

--- a/domains/transfer-agreements/TransferAgreements.API/API/appsettings.Development.json
+++ b/domains/transfer-agreements/TransferAgreements.API/API/appsettings.Development.json
@@ -14,5 +14,6 @@
     },
     "projectOrigin": {
         "WalletUrl": "https://demo.energioprindelse.dk/"
-    }
+    },
+    "Otlp:ReceiverEndpoint": "http://localhost:4317"
 }
