Align authorize roles

--- a/domains/auth/Auth.API/API/appsettings.Development.json
+++ b/domains/auth/Auth.API/API/appsettings.Development.json
@@ -37,8 +37,12 @@
     "Roles": {
         "RoleConfigurations": [
             {
-                "Key": "authAdmin",
-                "Name": "AuthAdmin",
+                "Key": "organization-admin",
+                "Name": "Organization Administrator",
+                "Inherits": [
+                    "role-admin",
+                    "user-admin"
+                ],
                 "Matches": [
                     {
                         "Property": "cna",
@@ -46,6 +50,14 @@
                         "Operator": "contains"
                     }
                 ]
+            },
+            {
+                "Key": "role-admin",
+                "Name": "Roles Administrator"
+            },
+            {
+                "Key": "user-admin",
+                "Name": "User Administrator"
             },
             {
                 "Key": "viewer",
