--- a/domains/transfer-agreements/chart/templates/api-deployment.yaml
+++ b/domains/transfer-agreements/chart/templates/api-deployment.yaml
@@ -67,6 +67,8 @@ spec:
               value: $(password)
             - name: PROJECTORIGIN__WALLETURL
               value: {{ .Values.projectOrigin.walletUrl }}
+            - name: Otlp__ReceiverEndpoint
+              value: {{ .Values.otlp.receiverEndpoint }}
           envFrom:
             - secretRef:
                 name: {{ .Release.Name }}-cnpg-cluster-app
