--- a/domains/transfer-agreements/chart/values.yaml
+++ b/domains/transfer-agreements/chart/values.yaml
@@ -1,10 +1,8 @@
 api:
   replicaCount: 3
   image: {}
-metrics:
-  prometheus:
-    enabled: true
-    additionalLabels: {}
+otlp:
+  receiverEndpoint:
 cnpg:
   cluster:
     replicaCount:
