--- a/domains/transfer-agreements/TransferAgreements.API/API.IntegrationTests/API.IntegrationTests.csproj
+++ b/domains/transfer-agreements/TransferAgreements.API/API.IntegrationTests/API.IntegrationTests.csproj
@@ -14,7 +14,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.5" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.5" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.1" />
-        <PackageReference Include="Moq" Version="4.18.4" />
+        <PackageReference Include="NSubstitute" Version="5.0.0" />
         <PackageReference Include="Testcontainers.PostgreSql" Version="3.2.0" />
         <PackageReference Include="Verify" Version="20.4.0" />
         <PackageReference Include="Verify.Xunit" Version="20.4.0" />
