delete contracts without WDE on startup

--- a/domains/certificates/Query.API/API/appsettings.Development.json
+++ b/domains/certificates/Query.API/API/appsettings.Development.json
@@ -11,6 +11,9 @@
     "Datasync": {
         "Url": "http://data-sync-api"
     },
+    "Wallet": {
+        "Url":  "http://wallet"
+    },
     "RabbitMq": {
         "Host": "localhost",
         "Port": 5672,
