--- a/domains/transfer-agreements/TransferAgreements.API/API/appsettings.Development.json
+++ b/domains/transfer-agreements/TransferAgreements.API/API/appsettings.Development.json
@@ -15,5 +15,7 @@
     "projectOrigin": {
         "WalletUrl": "https://demo.energioprindelse.dk/"
     },
-    "Otlp:ReceiverEndpoint": "http://localhost:4317"
+    "Otlp": {
+        "ReceiverEndpoint": "http://localhost:4317"
+    }
 }
