--- a/domains/certificates/Shared/ProjectOriginClients/ProjectOriginClients.csproj
+++ b/domains/certificates/Shared/ProjectOriginClients/ProjectOriginClients.csproj
@@ -39,7 +39,7 @@
 	</ItemGroup>
 
 	<PropertyGroup>
-		<WalletVersion>0.1.3</WalletVersion>
+		<WalletVersion>0.2.0-rc.1</WalletVersion>
 	</PropertyGroup>
 	<ItemGroup>
 		<AssemblyAttribute Include="ProjectOriginClients.WalletVersionAttribute">
